tests/ui/suggestions/type-ascription-and-other-error.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `crablang`
  --> $DIR/type-ascription-and-other-error.rs:2:9
   |
LL |     not crablang;
   |         ^^^^ expected one of 8 possible tokens

error: aborting due to previous error

